welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:23: error: not found: value PosY
        setPos(posX, PosY)
                     ^